# ShExStatements

./: .gitignore  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  api.html  app.py  docs.md  htmlelement.csv  main.py  painting.csv  requirements.txt  setup.py  shexstatements.sh
.github/workflows/: ci.yml  codeql-analysis.yml  pages.yml  pythonpackage.yml  release-pypi.yml
backend/: Dockerfile  pyproject.toml
backend/api/: __init__.py  main.py
backend/api/middleware/: __init__.py
backend/api/models/: __init__.py  requests.py  responses.py
backend/api/routes/: __init__.py  convert.py  export.py  health.py  validate.py
backend/api/services/: __init__.py  converter.py
backend/shexstatements/: __init__.py  cliargs.py  errors.py  parser_cache.py  shexfromapplprofilecsv.py  shexfromcsv.py  shexfromspreadsheet.py  shexjfromcsv.py  shexstatement.py  shexstatementsparser.py  version.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  test_convert.py  test_export.py  test_health.py  test_validate.py
backend/tests/legacy/: parsertest.py  shexfromapcsvtest.py  shexfromcsvtest.py  tests.py  wdshexfromcsvtest.py
docker/: docker-compose.dev.yml  docker-compose.yml
docs/: RELEASE.md  api.md  api.rst  conf.py  docs.md  docs.rst  index.rst  shexstatements.rst
examples/: emptyvalues.csv  example.csv  foaf.csv  hospital.csv  language.csv  language.ods  language.shexj  language.xls  language.xlsx  languageap.csv  languagedelimbar.csv  languagedelimsemicolon.csv  languagenumcardinality.csv  schemakorf.csv  tvseries.csv  tvseriesclosed.csv  tvseriesclosedsymbols.csv  tvseriesextra.csv  tvseriesplusplus.csv
examples/api/: tvseries.json
examples/header/: languageheader.csv
examples/tests/: onevaluecardinality.csv  tvseriesnegativeprop.csv
examples/wikidata/: algorithm.csv  apiendpoint.csv  app.csv  covidd.csv  covidpandemic.csv  crematorium.csv  dataset.csv  datastructure.csv  englishadjective.csv  englishadverb.csv  englishinterjection.csv  englishnoun.csv  englishpreposition.csv  frenchadjective.csv  frenchinterjection.csv  hospital.csv  lockdown.csv  malayalamnoun.csv  malayalamverb.csv  morgue.csv  operatingsystem.csv  pandemic.csv  preprint.csv  publicsculpture.csv  softwareuse.csv  sparqlendpoint.csv  taxon.csv  wikimediacategory.csv
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/frontend/: index.html  postcss.config.js.html  tailwind.config.js.html
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/hooks/: useConvert.ts  useDebounce.ts
frontend/src/services/: api.ts  wasm.ts
frontend/src/stores/: editorStore.ts  (+2 more)
shexstatements/: application.py  cliargs.py  errors.py  parser_cache.py  shexfromapplprofilecsv.py  shexfromcsv.py  shexfromspreadsheet.py  shexjfromcsv.py  shexstatement.py  shexstatementsparser.py  version.py
shexstatements/templates/: about.html  api.html  docs.html  quickstart.html  shexstatements.html
static/css/: style.css
templates/: about.html  base.html  docs.html  quickstart.html  shexstatements.html
tests/: __init__.py  parsertest.py  shexfromapcsvtest.py  shexfromcsvtest.py  shexgentest.py  shexjfromcsvtest.py  tests.py  wdshexfromcsvtest.py
(+32 files in other folders)
